--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="container">
         <div class="wrapper">
             <div class="meal-search">
-                <h2 class="title">Find receipe from your ingredient</h2>
-                 <blockquote>Real food doestn have ingredients, real food is ingredient. <br>
-                    <cite>- Jamie Oliver</cite>
+                <h2 class="title">Find recipe from your ingredient</h2>
+                 <blockquote>If you learn a recipe, you can cook the recipe. If you learn the technique, you can cook anything.<br>
+                    <cite>-Michael Symon</cite>
                  </blockquote>
 
                  <div class="meal-search-box">
